feat : 스프링 시큐리티 구현완료 / 2023-09-15 이세은

--- a/KccBrew/.settings/org.eclipse.core.resources.prefs
+++ b/KccBrew/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@
 >>>>>>>=ed342b9ab29a81f600111729455d95ba437e6e10
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/asMng/asReceipt.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/schdl/calendartest.jsp=UTF-8
 encoding//src/main/webapp/resources/js/comm/login.js=UTF-8
