--- a/KccBrew/.classpath
+++ b/KccBrew/.classpath
@@ -36,5 +36,13 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-dbcp2-2.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-pool2-2.11.1.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/gson-2.10.1.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/json-20230227.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/sqlite-jdbc-3.41.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
