--- a/KccBrew/.classpath
+++ b/KccBrew/.classpath
@@ -27,6 +27,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -36,13 +37,5 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-dbcp2-2.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/commons-pool2-2.11.1.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/gson-2.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/json-20230227.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/lombok.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="C:/study/jar 파일 모음/jar 파일 모음/sqlite-jdbc-3.41.2.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
